# dynamic-update-bot

./: .dockerignore  .pre-commit-config.yaml  Dockerfile  LICENSE  api.py  bot.py  docker-compose.yaml  env.py  pyproject.toml  sample_extension.py
.github/deploy/: deploy-config.yaml  deploy.sh
.github/workflows/: dynamic-deploy.yaml
